# math_modeling_agent

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
agents/: __init__.py  analysis_agent.py  base.py  code_plan_agent.py  code_repair_agent.py  coding_agent.py  decision_agent.py  evidence_agent.py  execution_agent.py  experiment_plan_agent.py  export_agent.py  fact_reviewer.py  formulation_agent.py  innovation_agent.py  language_reviewer.py  math_reviewer.py  model_selection_agent.py  model_selection_crew.py  modeling_agent.py  modeling_critic_agent.py  outline_agent.py  problem_agent.py  review_agent.py  structure_reviewer.py  writing_agent.py
app/: __init__.py  config.py  main.py  streamlit_app.py
benchmarks/: __init__.py  answer_correctness_gold.sample.json  national_competition_cases.json  real_competition_corpus.json  real_competition_gold.json
docs/: answer_correctness_gold_gate.md  national_award_agent_optimization.md
models/: __init__.py  catalog.py
prompts/: __init__.py  code_generation.md  code_plan.md  decision_arbitration.md  experiment_plan.md  fact_review.md  math_review.md  modeling_critic.md  modeling_plan.md  national_award_paper_deep_study.md  national_award_paper_style.md  paper_writing.md  problem_analysis.md  review.md  structure_review.md  task_decomposition_json.md
tests/: conftest.py  test_analysis_feedback.py  test_answer_correctness.py  test_answer_reproduction_audit.py  test_competition_benchmark.py  test_competition_corpus.py  test_contest_simulation.py  test_documentation.py  test_encoding.py  (+40 more)
(+121 files in other folders)
