[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "math-modeling-agent"
version = "0.1.0"
description = "数学建模智能体工作流：自动选模型、生成代码、执行、出图出表并生成论文。"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "networkx>=3.2",
    "scipy>=1.11.0",
    "openpyxl>=3.1.0",
    "openai>=1.0.0",
    "httpx>=0.23.0",
    "requests>=2.31.0",
    "python-docx>=1.1.0",
    "reportlab>=4.1.0",
    "pypdf>=5.0.0",
    "streamlit>=1.36.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["agents", "app", "models", "tools", "workflows"]
omit = [
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 35

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    ".pytest_cache",
    "__pycache__",
    "PDF",
    "workspace",
    "_test_ws_*",
    "XDxk",
]

[tool.ruff.lint]
select = ["E9", "F63", "F7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "agents*", "models*", "tools*", "workflows*", "prompts*", "benchmarks*"]
exclude = ["tests*", "workspace*", "PDF*"]

[tool.setuptools.package-data]
prompts = ["*.md"]
benchmarks = ["*.json"]
